# analyze_youtube_playlist

./: .gitignore  README.md  pyproject.toml  sel.py
db/: chroma.sqlite3
src/analyze_youtube_playlist/: crew.py  main.py
src/analyze_youtube_playlist/config/: agents.yaml  tasks.yaml
src/analyze_youtube_playlist/tools/: youtube_playlist_scraper.py  youtube_video_search.py
